--- a/lang/lang_th.json
+++ b/lang/lang_th.json
@@ -3,5 +3,6 @@
   "description": "คำอธิบาย",
   "syntax": "ไวยากรณ์",
   "example": "ตัวอย่าง",
+  "tutorial": "บทเรียน",
   "not_found": "ไม่พบสูตรที่ตรงกับคำค้นหา"
 }
